--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "bootstrap": "^4.5.0",
+    "dom-to-image": "^2.6.0",
     "jquery": "^3.5.1",
+    "jspdf": "^2.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
